# serializer version: 1
# name: TestBlastRadius.test_user_blast_radius
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id IN
         (SELECT id
          FROM person
          WHERE team_id = 2
            AND (has(['0', '1', '2', '3'], replaceRegexpAll(JSONExtractRaw(properties, 'group'), '^"|"$', ''))) )
     GROUP BY id
     HAVING max(is_deleted) = 0
     AND (has(['0', '1', '2', '3'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'group'), '^"|"$', ''))) SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT group_key,
            argMax(group_properties, _timestamp) AS group_properties_0
     FROM groups
     WHERE team_id = 2
       AND group_type_index = 0
     GROUP BY group_key
     HAVING 1=1
     AND (has(['0', '1', '2', '3'], replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', ''))))
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT group_key)
  FROM groups
  WHERE team_id = 2
    AND group_type_index = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups_multiple_queries
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT group_key,
            argMax(group_properties, _timestamp) AS group_properties_0
     FROM groups
     WHERE team_id = 2
       AND group_type_index = 0
     GROUP BY group_key
     HAVING 1=1
     AND ((has(['0', '1', '2', '3', '4'], replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', '')))
          AND (has(['2', '3', '4', '5', '6'], replaceRegexpAll(JSONExtractRaw(group_properties_0, 'industry'), '^"|"$', '')))))
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_groups_multiple_queries.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(DISTINCT group_key)
  FROM groups
  WHERE team_id = 2
    AND group_type_index = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.1
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.2
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.3
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.4
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id in
         (SELECT DISTINCT person_id
          FROM cohortpeople
          WHERE team_id = 2
            AND cohort_id = 2
            AND version = 0 )
       AND id in
         (SELECT DISTINCT person_id
          FROM cohortpeople
          WHERE team_id = 2
            AND cohort_id = 2
            AND version = 0 )
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_precalculated_cohorts.5
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts
  '''
  
  SELECT count(DISTINCT person_id)
  FROM person_static_cohort
  WHERE team_id = 2
    AND cohort_id = 2
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id IN
         (SELECT id
          FROM person
          INNER JOIN
            (SELECT person_id
             FROM person_static_cohort
             WHERE team_id = 2
               AND cohort_id = 2
             GROUP BY person_id,
                      cohort_id,
                      team_id) cohort_persons ON cohort_persons.person_id = person.id
          WHERE team_id = 2
            AND ((has(['1', '2', '4', '5', '6'], replaceRegexpAll(JSONExtractRaw(properties, 'group'), '^"|"$', '')))) )
     GROUP BY id
     HAVING max(is_deleted) = 0
     AND ((has(['1', '2', '4', '5', '6'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'group'), '^"|"$', '')))) SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.2
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.3
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.4
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.5
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.6
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_multiple_static_cohorts.7
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id in
         (SELECT person_id as id
          FROM person_static_cohort
          WHERE cohort_id = 2
            AND team_id = 2)
       AND id in
         (SELECT DISTINCT person_id
          FROM cohortpeople
          WHERE team_id = 2
            AND cohort_id = 2
            AND version = 0 )
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
       AND id IN
         (SELECT id
          FROM person
          WHERE team_id = 2
            AND (((has(['none'], replaceRegexpAll(JSONExtractRaw(properties, 'group'), '^"|"$', '')))
                  OR (has(['1', '2', '3'], replaceRegexpAll(JSONExtractRaw(properties, 'group'), '^"|"$', ''))))) )
     GROUP BY id
     HAVING max(is_deleted) = 0
     AND (((has(['none'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'group'), '^"|"$', '')))
           OR (has(['1', '2', '3'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'group'), '^"|"$', ''))))) SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.2
  '''
  
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = NULL
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.3
  '''
  /* cohort_calculation: */
  SELECT count(DISTINCT person_id)
  FROM cohortpeople
  WHERE team_id = 2
    AND cohort_id = 2
    AND version = 0
  '''
# ---
# name: TestBlastRadius.test_user_blast_radius_with_single_cohort.4
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT count(1)
  FROM
    (SELECT id
     FROM person
     INNER JOIN
       (SELECT DISTINCT person_id
        FROM cohortpeople
        WHERE team_id = 2
          AND cohort_id = 2
          AND version = 0
        ORDER BY person_id) cohort_persons ON cohort_persons.person_id = person.id
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0 SETTINGS optimize_aggregation_in_order = 1)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."key" = 'some-feature2'
         AND "clairview_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.1
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE ("clairview_cohort"."id" = 2
         AND "clairview_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.2
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND ("clairview_person"."properties" -> 'key') = '"value"'::jsonb
         AND "clairview_person"."properties" ? 'key'
         AND NOT (("clairview_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "clairview_person"."id" ASC
  LIMIT 2
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.3
  '''
  SELECT "clairview_persondistinctid"."id",
         "clairview_persondistinctid"."team_id",
         "clairview_persondistinctid"."person_id",
         "clairview_persondistinctid"."distinct_id",
         "clairview_persondistinctid"."version"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "clairview_persondistinctid" U0
            WHERE U0."person_id" = ("clairview_persondistinctid"."person_id")
            LIMIT 3)
         AND "clairview_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.4
  '''
  SELECT "clairview_person"."uuid"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND "clairview_person"."uuid" IN ('00000000000040008000000000000000'::uuid,
                                         '00000000000040008000000000000001'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "clairview_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("clairview_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.5
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.6
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND ("clairview_person"."properties" -> 'key') = '"value"'::jsonb
         AND "clairview_person"."properties" ? 'key'
         AND NOT (("clairview_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "clairview_person"."id" ASC
  LIMIT 2
  OFFSET 2
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.7
  '''
  SELECT "clairview_persondistinctid"."id",
         "clairview_persondistinctid"."team_id",
         "clairview_persondistinctid"."person_id",
         "clairview_persondistinctid"."distinct_id",
         "clairview_persondistinctid"."version"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "clairview_persondistinctid" U0
            WHERE U0."person_id" = ("clairview_persondistinctid"."person_id")
            LIMIT 3)
         AND "clairview_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.8
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND ("clairview_person"."properties" -> 'key') = '"value"'::jsonb
         AND "clairview_person"."properties" ? 'key'
         AND NOT (("clairview_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "clairview_person"."id" ASC
  LIMIT 2
  OFFSET 4
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_iterator.9
  '''
  SELECT "clairview_person"."uuid"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND "clairview_person"."uuid" IN ('00000000000040008000000000000002'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "clairview_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("clairview_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."key" = 'some-feature-new'
         AND "clairview_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.1
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE ("clairview_cohort"."id" = 2
         AND "clairview_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.10
  '''
  SELECT "clairview_person"."uuid"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND "clairview_person"."uuid" IN ('00000000000040008000000000000000'::uuid,
                                         '00000000000040008000000000000001'::uuid,
                                         '00000000000040008000000000000002'::uuid,
                                         '00000000000040008000000000000003'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "clairview_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("clairview_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.11
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.2
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE (NOT "clairview_cohort"."deleted"
         AND "clairview_cohort"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.3
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND ((("clairview_person"."properties" -> 'group') = '"none"'::jsonb
               AND "clairview_person"."properties" ? 'group'
               AND NOT (("clairview_person"."properties" -> 'group') = 'null'::jsonb))
              OR (("clairview_person"."properties" -> 'group2') IN ('1'::jsonb,
                                                                  '2'::jsonb,
                                                                  '3'::jsonb)
                  AND "clairview_person"."properties" ? 'group2'
                  AND NOT (("clairview_person"."properties" -> 'group2') = 'null'::jsonb))
              OR EXISTS
                (SELECT 1 AS "a"
                 FROM "clairview_cohortpeople" U0
                 WHERE (U0."cohort_id" = 2
                        AND U0."cohort_id" = 2
                        AND U0."person_id" = ("clairview_person"."id"))
                 LIMIT 1)
              OR (("clairview_person"."properties" -> 'does-not-exist') = '"none"'::jsonb
                  AND "clairview_person"."properties" ? 'does-not-exist'
                  AND NOT (("clairview_person"."properties" -> 'does-not-exist') = 'null'::jsonb))
              OR (("clairview_person"."properties" -> 'key') = '"value"'::jsonb
                  AND "clairview_person"."properties" ? 'key'
                  AND NOT (("clairview_person"."properties" -> 'key') = 'null'::jsonb))))
  ORDER BY "clairview_person"."id" ASC
  LIMIT 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.4
  '''
  SELECT "clairview_persondistinctid"."id",
         "clairview_persondistinctid"."team_id",
         "clairview_persondistinctid"."person_id",
         "clairview_persondistinctid"."distinct_id",
         "clairview_persondistinctid"."version"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "clairview_persondistinctid" U0
            WHERE U0."person_id" = ("clairview_persondistinctid"."person_id")
            LIMIT 3)
         AND "clairview_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.5
  '''
  SELECT ("clairview_person"."id" IS NULL
          OR "clairview_person"."id" IS NULL
          OR EXISTS
            (SELECT 1 AS "a"
             FROM "clairview_cohortpeople" U0
             WHERE (U0."cohort_id" = 2
                    AND U0."cohort_id" = 2
                    AND U0."person_id" = ("clairview_person"."id"))
             LIMIT 1)
          OR "clairview_person"."id" IS NULL) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = 'person1'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.6
  '''
  SELECT ("clairview_person"."id" IS NOT NULL
          OR "clairview_person"."id" IS NULL
          OR EXISTS
            (SELECT 1 AS "a"
             FROM "clairview_cohortpeople" U0
             WHERE (U0."cohort_id" = 2
                    AND U0."cohort_id" = 2
                    AND U0."person_id" = ("clairview_person"."id"))
             LIMIT 1)
          OR "clairview_person"."id" IS NULL) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = 'person2'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.7
  '''
  SELECT ("clairview_person"."id" IS NULL
          OR "clairview_person"."id" IS NOT NULL
          OR EXISTS
            (SELECT 1 AS "a"
             FROM "clairview_cohortpeople" U0
             WHERE (U0."cohort_id" = 2
                    AND U0."cohort_id" = 2
                    AND U0."person_id" = ("clairview_person"."id"))
             LIMIT 1)
          OR "clairview_person"."id" IS NULL) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = 'person3'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.8
  '''
  SELECT ("clairview_person"."id" IS NULL
          OR "clairview_person"."id" IS NULL
          OR EXISTS
            (SELECT 1 AS "a"
             FROM "clairview_cohortpeople" U0
             WHERE (U0."cohort_id" = 2
                    AND U0."cohort_id" = 2
                    AND U0."person_id" = ("clairview_person"."id"))
             LIMIT 1)
          OR "clairview_person"."id" IS NULL) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = 'person4'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_cohort_flag_adds_cohort_props_as_default_too.9
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND ((("clairview_person"."properties" -> 'group') = '"none"'::jsonb
               AND "clairview_person"."properties" ? 'group'
               AND NOT (("clairview_person"."properties" -> 'group') = 'null'::jsonb))
              OR (("clairview_person"."properties" -> 'group2') IN ('1'::jsonb,
                                                                  '2'::jsonb,
                                                                  '3'::jsonb)
                  AND "clairview_person"."properties" ? 'group2'
                  AND NOT (("clairview_person"."properties" -> 'group2') = 'null'::jsonb))
              OR EXISTS
                (SELECT 1 AS "a"
                 FROM "clairview_cohortpeople" U0
                 WHERE (U0."cohort_id" = 2
                        AND U0."cohort_id" = 2
                        AND U0."person_id" = ("clairview_person"."id"))
                 LIMIT 1)
              OR (("clairview_person"."properties" -> 'does-not-exist') = '"none"'::jsonb
                  AND "clairview_person"."properties" ? 'does-not-exist'
                  AND NOT (("clairview_person"."properties" -> 'does-not-exist') = 'null'::jsonb))
              OR (("clairview_person"."properties" -> 'key') = '"value"'::jsonb
                  AND "clairview_person"."properties" ? 'key'
                  AND NOT (("clairview_person"."properties" -> 'key') = 'null'::jsonb))))
  ORDER BY "clairview_person"."id" ASC
  LIMIT 1000
  OFFSET 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."key" = 'some-feature2'
         AND "clairview_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.1
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE ("clairview_cohort"."id" = 2
         AND "clairview_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.10
  '''
  SELECT "clairview_persondistinctid"."id",
         "clairview_persondistinctid"."team_id",
         "clairview_persondistinctid"."person_id",
         "clairview_persondistinctid"."distinct_id",
         "clairview_persondistinctid"."version"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "clairview_persondistinctid" U0
            WHERE U0."person_id" = ("clairview_persondistinctid"."person_id")
            LIMIT 3)
         AND "clairview_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.11
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND ("clairview_person"."properties" -> 'key') IS NOT NULL)
  ORDER BY "clairview_person"."id" ASC
  LIMIT 1000
  OFFSET 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.12
  '''
  SELECT "clairview_person"."uuid"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND "clairview_person"."uuid" IN ('00000000000040008000000000000000'::uuid,
                                         '00000000000040008000000000000001'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "clairview_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("clairview_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.13
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.2
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND UPPER(("clairview_person"."properties" ->> 'key')::text) LIKE UPPER('%value%')
         AND "clairview_person"."properties" ? 'key'
         AND NOT (("clairview_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "clairview_person"."id" ASC
  LIMIT 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.3
  '''
  SELECT "clairview_persondistinctid"."id",
         "clairview_persondistinctid"."team_id",
         "clairview_persondistinctid"."person_id",
         "clairview_persondistinctid"."distinct_id",
         "clairview_persondistinctid"."version"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "clairview_persondistinctid" U0
            WHERE U0."person_id" = ("clairview_persondistinctid"."person_id")
            LIMIT 3)
         AND "clairview_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.4
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND UPPER(("clairview_person"."properties" ->> 'key')::text) LIKE UPPER('%value%')
         AND "clairview_person"."properties" ? 'key'
         AND NOT (("clairview_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "clairview_person"."id" ASC
  LIMIT 1000
  OFFSET 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.5
  '''
  SELECT "clairview_person"."uuid"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND "clairview_person"."uuid" IN ('00000000000040008000000000000000'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "clairview_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("clairview_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.6
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.7
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."key" = 'some-feature-new'
         AND "clairview_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.8
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE ("clairview_cohort"."id" = 2
         AND "clairview_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_default_person_properties_adjustment.9
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND ("clairview_person"."properties" -> 'key') IS NOT NULL)
  ORDER BY "clairview_person"."id" ASC
  LIMIT 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."key" = 'some-feature2'
         AND "clairview_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.1
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE ("clairview_cohort"."id" = 2
         AND "clairview_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.2
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND ("clairview_person"."properties" -> 'key') = '"value"'::jsonb
         AND "clairview_person"."properties" ? 'key'
         AND NOT (("clairview_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "clairview_person"."id" ASC
  LIMIT 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.3
  '''
  SELECT "clairview_persondistinctid"."id",
         "clairview_persondistinctid"."team_id",
         "clairview_persondistinctid"."person_id",
         "clairview_persondistinctid"."distinct_id",
         "clairview_persondistinctid"."version"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "clairview_persondistinctid" U0
            WHERE U0."person_id" = ("clairview_persondistinctid"."person_id")
            LIMIT 3)
         AND "clairview_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.4
  '''
  SELECT "clairview_featureflaghashkeyoverride"."feature_flag_key",
         "clairview_featureflaghashkeyoverride"."hash_key",
         "clairview_featureflaghashkeyoverride"."person_id"
  FROM "clairview_featureflaghashkeyoverride"
  WHERE ("clairview_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "clairview_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.5
  '''
  SELECT "clairview_featureflaghashkeyoverride"."feature_flag_key",
         "clairview_featureflaghashkeyoverride"."hash_key",
         "clairview_featureflaghashkeyoverride"."person_id"
  FROM "clairview_featureflaghashkeyoverride"
  WHERE ("clairview_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "clairview_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.6
  '''
  SELECT "clairview_featureflaghashkeyoverride"."feature_flag_key",
         "clairview_featureflaghashkeyoverride"."hash_key",
         "clairview_featureflaghashkeyoverride"."person_id"
  FROM "clairview_featureflaghashkeyoverride"
  WHERE ("clairview_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "clairview_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.7
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND ("clairview_person"."properties" -> 'key') = '"value"'::jsonb
         AND "clairview_person"."properties" ? 'key'
         AND NOT (("clairview_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "clairview_person"."id" ASC
  LIMIT 1000
  OFFSET 1000
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.8
  '''
  SELECT "clairview_person"."uuid"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND "clairview_person"."uuid" IN ('00000000000040008000000000000002'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "clairview_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("clairview_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestCohortGenerationForFeatureFlag.test_creating_static_cohort_with_experience_continuity_flag.9
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_cant_create_flag_with_data_that_fails_to_query
  '''
  SELECT (("clairview_person"."properties" ->> 'email')::text ~ '2.3.9{0-9}{1}'
          AND "clairview_person"."properties" ? 'email'
          AND NOT (("clairview_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_person"
  WHERE "clairview_person"."team_id" = 2
  LIMIT 10
  '''
# ---
# name: TestFeatureFlag.test_cant_create_flag_with_group_data_that_fails_to_query
  '''
  SELECT (("clairview_group"."group_properties" ->> 'email')::text ~ '2.3.9{0-9}{1 ef}'
          AND "clairview_group"."group_properties" ? 'email'
          AND NOT (("clairview_group"."group_properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "clairview_group"
  WHERE ("clairview_group"."group_type_index" = 2
         AND "clairview_group"."team_id" = 2)
  LIMIT 10
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.1
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.10
  '''
  SELECT "clairview_person"."uuid"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND "clairview_person"."uuid" IN ('00000000000040008000000000000000'::uuid)
         AND NOT (EXISTS
                    (SELECT 1 AS "a"
                     FROM "clairview_cohortpeople" U1
                     WHERE (U1."cohort_id" = 2
                            AND U1."person_id" = ("clairview_person"."id"))
                     LIMIT 1)))
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.11
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.12
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.13
  '''
  SELECT "clairview_experiment"."id",
         "clairview_experiment"."name",
         "clairview_experiment"."description",
         "clairview_experiment"."team_id",
         "clairview_experiment"."filters",
         "clairview_experiment"."parameters",
         "clairview_experiment"."secondary_metrics",
         "clairview_experiment"."created_by_id",
         "clairview_experiment"."feature_flag_id",
         "clairview_experiment"."exposure_cohort_id",
         "clairview_experiment"."start_date",
         "clairview_experiment"."end_date",
         "clairview_experiment"."created_at",
         "clairview_experiment"."updated_at",
         "clairview_experiment"."archived",
         "clairview_experiment"."type",
         "clairview_experiment"."variants",
         "clairview_experiment"."metrics"
  FROM "clairview_experiment"
  WHERE "clairview_experiment"."exposure_cohort_id" = 2
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.14
  '''
  /* user_id:0 celery:clairview.tasks.calculate_cohort.insert_cohort_from_feature_flag */
  SELECT count(DISTINCT person_id)
  FROM person_static_cohort
  WHERE team_id = 2
    AND cohort_id = 2
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.15
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  INNER JOIN
    (SELECT person_id
     FROM person_static_cohort
     WHERE team_id = 2
       AND cohort_id = 2
     GROUP BY person_id,
              cohort_id,
              team_id) cohort_persons ON cohort_persons.person_id = person.id
  WHERE team_id = 2
  GROUP BY id
  HAVING max(is_deleted) = 0
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.2
  '''
  SELECT "clairview_organizationmembership"."id",
         "clairview_organizationmembership"."organization_id",
         "clairview_organizationmembership"."user_id",
         "clairview_organizationmembership"."level",
         "clairview_organizationmembership"."joined_at",
         "clairview_organizationmembership"."updated_at",
         "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organizationmembership"
  INNER JOIN "clairview_organization" ON ("clairview_organizationmembership"."organization_id" = "clairview_organization"."id")
  WHERE "clairview_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.3
  '''
  SELECT "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organization"
  WHERE "clairview_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.4
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics",
         "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."requested_password_reset_at",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_featureflag"
  INNER JOIN "clairview_team" ON ("clairview_featureflag"."team_id" = "clairview_team"."id")
  LEFT OUTER JOIN "clairview_user" ON ("clairview_featureflag"."created_by_id" = "clairview_user"."id")
  WHERE ("clairview_team"."project_id" = 2
         AND "clairview_featureflag"."id" = 2)
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.5
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."key" = 'some-feature'
         AND "clairview_featureflag"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.6
  '''
  SELECT "clairview_cohort"."id",
         "clairview_cohort"."name",
         "clairview_cohort"."description",
         "clairview_cohort"."team_id",
         "clairview_cohort"."deleted",
         "clairview_cohort"."filters",
         "clairview_cohort"."query",
         "clairview_cohort"."version",
         "clairview_cohort"."pending_version",
         "clairview_cohort"."count",
         "clairview_cohort"."created_by_id",
         "clairview_cohort"."created_at",
         "clairview_cohort"."is_calculating",
         "clairview_cohort"."last_calculation",
         "clairview_cohort"."errors_calculating",
         "clairview_cohort"."is_static",
         "clairview_cohort"."groups"
  FROM "clairview_cohort"
  WHERE ("clairview_cohort"."id" = 2
         AND "clairview_cohort"."team_id" = 2)
  LIMIT 21
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.7
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND ("clairview_person"."properties" -> 'key') = '"value"'::jsonb
         AND "clairview_person"."properties" ? 'key'
         AND NOT (("clairview_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "clairview_person"."id" ASC
  LIMIT 10000
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.8
  '''
  SELECT "clairview_persondistinctid"."id",
         "clairview_persondistinctid"."team_id",
         "clairview_persondistinctid"."person_id",
         "clairview_persondistinctid"."distinct_id",
         "clairview_persondistinctid"."version"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."id" IN
           (SELECT U0."id"
            FROM "clairview_persondistinctid" U0
            WHERE U0."person_id" = ("clairview_persondistinctid"."person_id")
            LIMIT 3)
         AND "clairview_persondistinctid"."person_id" IN (1,
                                                        2,
                                                        3,
                                                        4,
                                                        5 /* ... */))
  '''
# ---
# name: TestFeatureFlag.test_creating_static_cohort.9
  '''
  SELECT "clairview_person"."id",
         "clairview_person"."created_at",
         "clairview_person"."properties_last_updated_at",
         "clairview_person"."properties_last_operation",
         "clairview_person"."team_id",
         "clairview_person"."properties",
         "clairview_person"."is_user_id",
         "clairview_person"."is_identified",
         "clairview_person"."uuid",
         "clairview_person"."version"
  FROM "clairview_person"
  WHERE ("clairview_person"."team_id" = 2
         AND ("clairview_person"."properties" -> 'key') = '"value"'::jsonb
         AND "clairview_person"."properties" ? 'key'
         AND NOT (("clairview_person"."properties" -> 'key') = 'null'::jsonb))
  ORDER BY "clairview_person"."id" ASC
  LIMIT 10000
  OFFSET 10000
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM clairview_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{example_id,random}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM clairview_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) )
  SELECT key
  FROM clairview_featureflag
  WHERE team_id = 2
    AND ensure_experience_continuity = TRUE
    AND active = TRUE
    AND deleted = FALSE
    AND key NOT IN
      (SELECT feature_flag_key
       FROM existing_overrides)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.1
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM clairview_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{example_id,random}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM clairview_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) ),
       flags_to_override AS
    (SELECT key
     FROM clairview_featureflag
     WHERE team_id = 2
       AND ensure_experience_continuity = TRUE
       AND active = TRUE
       AND deleted = FALSE
       AND key NOT IN
         (SELECT feature_flag_key
          FROM existing_overrides) )
  INSERT INTO clairview_featureflaghashkeyoverride (team_id, person_id, feature_flag_key, hash_key)
  SELECT team_id,
         person_id,
         key,
         'random'
  FROM flags_to_override,
       target_person_ids
  WHERE EXISTS
      (SELECT 1
       FROM clairview_person
       WHERE id = person_id
         AND team_id = 2) ON CONFLICT DO NOTHING
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.2
  '''
  SELECT "clairview_persondistinctid"."person_id",
         "clairview_persondistinctid"."distinct_id"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."distinct_id" IN ('example_id',
                                                      'random')
         AND "clairview_persondistinctid"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.3
  '''
  SELECT "clairview_featureflaghashkeyoverride"."feature_flag_key",
         "clairview_featureflaghashkeyoverride"."hash_key",
         "clairview_featureflaghashkeyoverride"."person_id"
  FROM "clairview_featureflaghashkeyoverride"
  WHERE ("clairview_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "clairview_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.4
  '''
  SELECT (("clairview_person"."properties" -> 'email') = '"tim@clairview.com"'::jsonb
          AND "clairview_person"."properties" ? 'email'
          AND NOT (("clairview_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = 'example_id'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.5
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM clairview_persondistinctid
     WHERE team_id = 2
       AND distinct_id = ANY('{example_id,random}') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM clairview_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) )
  SELECT key
  FROM clairview_featureflag
  WHERE team_id = 2
    AND ensure_experience_continuity = TRUE
    AND active = TRUE
    AND deleted = FALSE
    AND key NOT IN
      (SELECT feature_flag_key
       FROM existing_overrides)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.6
  '''
  SELECT "clairview_persondistinctid"."person_id",
         "clairview_persondistinctid"."distinct_id"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."distinct_id" IN ('example_id',
                                                      'random')
         AND "clairview_persondistinctid"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.7
  '''
  SELECT "clairview_persondistinctid"."person_id",
         "clairview_persondistinctid"."distinct_id"
  FROM "clairview_persondistinctid"
  WHERE ("clairview_persondistinctid"."distinct_id" IN ('random')
         AND "clairview_persondistinctid"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_group_properties_and_slow_db
  '''
  SELECT "clairview_grouptypemapping"."id",
         "clairview_grouptypemapping"."team_id",
         "clairview_grouptypemapping"."group_type",
         "clairview_grouptypemapping"."group_type_index",
         "clairview_grouptypemapping"."name_singular",
         "clairview_grouptypemapping"."name_plural"
  FROM "clairview_grouptypemapping"
  WHERE "clairview_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_group_properties_and_slow_db.1
  '''
  SELECT "clairview_grouptypemapping"."id",
         "clairview_grouptypemapping"."team_id",
         "clairview_grouptypemapping"."group_type",
         "clairview_grouptypemapping"."group_type_index",
         "clairview_grouptypemapping"."name_singular",
         "clairview_grouptypemapping"."name_plural"
  FROM "clairview_grouptypemapping"
  WHERE "clairview_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_group_properties_and_slow_db.2
  '''
  SELECT "clairview_grouptypemapping"."id",
         "clairview_grouptypemapping"."team_id",
         "clairview_grouptypemapping"."group_type",
         "clairview_grouptypemapping"."group_type_index",
         "clairview_grouptypemapping"."name_singular",
         "clairview_grouptypemapping"."name_plural"
  FROM "clairview_grouptypemapping"
  WHERE "clairview_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_slow_db_doesnt_try_to_compute_conditions_again
  '''
  SELECT (("clairview_person"."properties" -> 'email') = '"tim@clairview.com"'::jsonb
          AND "clairview_person"."properties" ? 'email'
          AND NOT (("clairview_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0",
         (("clairview_person"."properties" -> 'email') = '"tim@clairview.com"'::jsonb
          AND "clairview_person"."properties" ? 'email'
          AND NOT (("clairview_person"."properties" -> 'email') = 'null'::jsonb)) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "clairview_person"
  INNER JOIN "clairview_persondistinctid" ON ("clairview_person"."id" = "clairview_persondistinctid"."person_id")
  WHERE ("clairview_persondistinctid"."distinct_id" = 'example_id'
         AND "clairview_persondistinctid"."team_id" = 2
         AND "clairview_person"."team_id" = 2)
  '''
# ---
